third_party/rust/cxx/v1/crate/tests/ui/unpin_impl.stderr
error[E0282]: type annotations needed
 --> tests/ui/unpin_impl.rs:1:1
  |
1 | #[cxx::bridge]
  | ^^^^^^^^^^^^^^ cannot infer type of the type parameter `Self` declared on the trait `__AmbiguousIfImpl`
  |
  = note: this error originates in the attribute macro `cxx::bridge` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0283]: type annotations needed
 --> tests/ui/unpin_impl.rs:1:1
  |
1 | #[cxx::bridge]
  | ^^^^^^^^^^^^^^ cannot infer type of the type parameter `Self` declared on the trait `__AmbiguousIfImpl`
  |
note: multiple `impl`s satisfying `ffi::Opaque: __AmbiguousIfImpl<_>` found
 --> tests/ui/unpin_impl.rs:1:1
  |
1 | #[cxx::bridge]
  | ^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `cxx::bridge` (in Nightly builds, run with -Z macro-backtrace for more info)
